--- a/static/index.html
+++ b/static/index.html
@@ -68,9 +68,9 @@
 			    	</form>
 				</div>
 				<nav class="collapse navbar-collapse" role="navigation">
-					<ul class="nav navbar-nav navbar-center" ng-show="me">
+					<ul class="nav navbar-nav" ng-show="me">
 						<li>
-							<a href="#">HOME</a>
+							<a href="/api/validate" ng-click="home()">HOME</a>
 						</li>
 						<li>
 							<a href="#">PRODUCTS</a>
@@ -104,7 +104,32 @@
 			</div>
 		</div>
 		<div class="container" style="margin-top: 100px;width:100%;">
-			<div class="row" ng-view></div>
+			<div class="row">
+				<div class="col-md-1">
+					<ul class="nav nav-stacked">
+						<li class="active"><a href="#">实时数据</a></li>
+						<li><a href="#">网络信息</a></li>
+						<li><a href="#">节点与传感器</a></li>
+						<li><a href="#">集中控制</a></li>
+						<li><a href="#">日志</a></li>
+						<li><a href="#">导出记录</a></li>
+					</ul>
+					<ul class="nav nav-stacked">
+						<li><a href="/api/blog" ng-click="blog()">博客</a></li>
+						<li><a href="#" data-toggle="modal" data-target="#rooms">聊天室</a></li>
+						<li><a href="#">新鲜事</a></li>
+						<li><a href="#">用户与朋友</a></li>
+						<li><a href="#">工具</a></li>
+						<li><a href="#">设置</a></li>
+					</ul>
+					<ul class="nav nav-stacked">
+						<li><a href="#">使用指南</a></li>
+						<li><a href="#">人工服务</a></li>
+					</ul>
+				</div>
+				<div class="col-md-11" ng-view>
+				</div>
+			</div>
 		</div>
 		<div class="container" style="margin-top: 100px;width:100%;">
 			<div class="row">
@@ -122,5 +147,6 @@
 		<script type="text/javascript" src="/controllers/room.js"></script>
 		<script type="text/javascript" src="/controllers/rooms.js"></script>
 		<script type="text/javascript" src="/controllers/message-creator.js"></script>
+		<script type="text/javascript" src="/controllers/blog.js"></script>
 	</body>
 </html>
